-
Bug
-
Resolution: Done
-
P2: Important
-
5.8.0
-
None
The code attached (main.cpp) shows the issue. I have a proposed fix that I'll posted in gerrit
Result of run before bugfix:
Seeking to 0 Wrote from 0 to 2038 Reading from 0 Read from 0 to 2038 Seeking to 2147483647 Wrote from 2147483647 to 2147485685 Reading from 2147483647 Read from 2147483647 to 2147485685 Seeking to 4294967295 Wrote from 4294967295 to 4294969333 Reading from 4294967295 Read from 4294967295 to 2037 ASSERT: "tempFile.pos() > pos" in file ..\QImageReaderTest\main.cpp, line 42 Press <RETURN> to close this window...
Result after fix:
Seeking to 0 Wrote from 0 to 2038 Reading from 0 Read from 0 to 2038 Seeking to 2147483647 Wrote from 2147483647 to 2147485685 Reading from 2147483647 Read from 2147483647 to 2147485685 Seeking to 4294967295 Wrote from 4294967295 to 4294969333 Reading from 4294967295 Read from 4294967295 to 4294969333 Done Press <RETURN> to close this window...
| For Gerrit Dashboard: QTBUG-59493 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 188476,8 | qbmphandler fix: use qint64 for caching QIODevice file position | 5.8 | qt/qtbase | Status: MERGED | +2 | 0 |